fix spacing issue

--- a/frontend/src/components/LoginFormPage/LoginForm.css
+++ b/frontend/src/components/LoginFormPage/LoginForm.css
@@ -170,6 +170,7 @@ input {
     border-radius: 10px;
     cursor: pointer;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
+    margin-right: 10px;
 }
 
 .form-container-border {
